# computational-linguistics

./: .gitignore  LICENSE  README.md  benchmark_utils.py  config.py  data.py  experiments.ipynb  generate.py  main.py  model.py  prep_data.py  pyproject.toml  report_tokenizers.ipynb  run_baseline.py  tokenizer.py  train.py  train_lstm.job
lab3/: lab3_report.ipynb
lab4/: FA_setup.sh  report.ipynb  report.md  training-pipeline.err  training-pipeline.out  training-pipeline_2362169.err  training-pipeline_2362169.out  training-pipeline_final.err  training-pipeline_final.out  training-pipeline_oom-fixed.out  training.sh
lab5/: qualitative_quantitative_analysis.ipynb  report.md  scoring.md  tasks.md
lab5/prompts/: code_generation.json  common_sense_reasoning.json  creative_writing.json  ethical_reasoning.json  factual_knowledge_and_retrieval.json  instruction_following.json  language_understanding_and_ambiguity.json  logical_reasoning.json  mathematical_problem_solving.json  prompt_notes.md  reading_comprehension.json
lab5/results/: outputs_for_scoring.csv  outputs_scored.csv
lab5/scripts/: jsonl_to_table.py  run_eval.py
