[project]
name = "computational-linguistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "protobuf>=6.33.0",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.1",
    "speakleash>=0.3.51",
    "tokenizers>=0.22.1",
    "transformers>=4.57.1",
]
