[project]
name = "computational-linguistics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "protobuf>=6.33.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "speakleash>=0.3.51",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "transformers[torch]>=4.57.1",
]
